[package]
name = "everywhere-audio"
version = "0.1.0"
edition = "2021"

[features]
file = ["hound"]
transcribe = ["crossbeam-channel"]          # only the sink skeleton

[[bin]]     # PTT live‑loopback
name = "ptt"
path = "src/bin/ptt.rs"

[[bin]]     # voice‑note to .wav
name = "voicenote"
path = "src/bin/voicenote.rs"

[dependencies]
anyhow = "1"
audiopus = "0.3.0-rc.0"
bytes = { version = "1", features = ["serde"] }     # ← serde for Burst
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
crossterm = { version = "0.27", default-features = false, features = ["event-stream"] }
futures = "0.3"
scopeguard = "1.2"

# optional sinks
hound = { version = "3.5", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
num_cpus = "1.17.0"
