[package]
name        = "everywhere-test-macro"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Run the same async test on browser‑WASM, WASI, or native with one attribute."
repository  = "https://github.com/your‑org/cross-test"
keywords    = ["testing", "async", "wasm", "wasi", "tokio"]
categories  = ["development-tools::testing", "wasm", "asynchronous"]

[lib]
proc-macro = true

[features]
default = ["native"]
native   = []          # host OS + Tokio
browser  = []          # wasm32‑unknown‑unknown + wasm-bindgen-test
wasi     = []          # wasm32‑wasi + async‑std

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full"] }
proc-macro-crate = "3.3.0"
